# SysMonitor_TeamAlpha

./: .MacAddress.cpp.swp  README.md  client  client.cpp  clientmain  clientmain.cpp  demo  demo.cpp  demo5  demo5.cpp  demoMain  demoMain.cpp  my_log.txt  server  server.cpp  server_boost.cpp  server_final.cpp  serverboost
Client_cmake/: CMakeLists.txt
Client_cmake/src/: Logger.cpp  Logger.h  dataHandler.cpp  dataHandler.h  main.cpp  main.h  socketHandler.cpp  socketHandler.h
server_cmake/: CMakeLists.txt
server_cmake/h/: CSVWriter.h  DatabaseConnector.h  DatabaseHandler.h  DbStructure.h  handleclient.h
server_cmake/src/: CSVWriter.cpp  DatabaseConnector.cpp  DatabaseHandler.cpp  DbStructure.cpp  handleclient.cpp  main.cpp
